﻿zg 28.06.2015 02:50:26 +0200 - build 4396

1. ACTL_SETCURRENTWINDOW, VCTL_QUIT и ECTL_QUIT выполняются сразу.

2. ACTL_COMMIT ничего не делает и оставлена для совместимости.

w17 26.06.2015 18:43:53 +0300 - build 4395

1. Косметика.

w17 25.06.2015 13:28:40 +0300 - build 4394

1. В диалогах элементы с флагами DIF_CENTERGROUP|DIF_HIDDEN не должны занимать место.

2. Продолжение 4392 -- при отключении дерева его пункты в меню и кнопки в диалогах теперь не показываются.

3. Новый параметр far:config -- Editor.NewFileUnixEOL
   Если задать значение True, во вновь создаваемых файлах будут использоваться юниксовые концы строк <LF>.

drkns 24.06.2015 22:13:33 +0200 - build 4393

1. Рефакторинг.

w17 15.06.2015 16:31:15 +0300 - build 4392

1. M#2951: Выкинуть все связанное с построением дерева каталогов из far3
   Пока не выкидываем, просто по-умолчанию отключаем.
   Для ценителей дерева можно через far:config сделать Panel.Tree.TurnOffCompletely = False.

drkns 09.06.2015 00:59:20 +0200 - build 4391

1. В меню дополнения клик мыши работал не так, как нажатие Enter.

drkns 06.06.2015 23:50:38 +0200 - build 4390

1. Более корректное решение для 4388.

drkns 05.06.2015 00:28:50 +0200 - build 4389

1. Уточнение 4387.3.

drkns 04.06.2015 23:42:07 +0200 - build 4388

1. VC10.

drkns 04.06.2015 21:34:47 +0200 - build 4387

1. Более параноидальные настройки предупреждений для gcc.

2. В какой-то из предыдущих версий была погнута проверка наличия определённых функций в ОС. Могло аукаться в неожиданных местах.

3. Рефакторинг.

zg 03.06.2015 21:49:26 +0200 - build 4386

1. 0003001: В ночных сборках сломалась работа скрипта BookmarkManager.

drkns 03.06.2015 20:24:43 +0200 - build 4385

1. 0003000: проблема копирования экрана с ключом /ag

zg 29.05.2015 23:39:54 +0200 - build 4384

1. 0002997: Improper sorting after Compare Folders.

zg 29.05.2015 19:12:18 +0200 - build 4383

1. на чистом профиле FARLANG устанавливается в пустое значение.

svs 21.05.2015 07:33:01 +0300 - build 4382