@@ -1,4 +1,10 @@
-﻿zg 28.06.2015 02:50:26 +0200 - build 4396
+﻿drkns 02.07.2015 23:37:09 +0200 - build 4397
+
+1. Сфорума: Странное поведение поиска F7/Shift-F7 в редактировании
+
+2. Warnings.
+
+zg 28.06.2015 02:50:26 +0200 - build 4396
 
 1. ACTL_SETCURRENTWINDOW, VCTL_QUIT и ECTL_QUIT выполняются сразу.
 
